fixing navbar on firefox

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
     font-size: 16px;
 }
 
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
 h1,
 h2,
 p {
